--- a/src/utils/config.json
+++ b/src/utils/config.json
@@ -1,6 +1,6 @@
 {
   "version": 1,
-  "disable_existing_loggers": false,
+  "disable_existing_loggers": true,
   "formatters": {
     "simple": {
       "format": "%(levelname)s: %(message)s [L%(lineno)d]"
@@ -11,19 +11,34 @@
     }
   },
   "handlers": {
+    "default": {
+      "class": "logging.StreamHandler",
+      "formatter": "simple",
+      "stream": "ext://sys.stderr"
+    },
     "stderr": {
       "class": "logging.StreamHandler",
       "level": "DEBUG",
       "formatter": "detailed",
       "stream": "ext://sys.stderr"
+    },
+    "file": {
+      "class": "logging.handlers.RotatingFileHandler",
+      "level": "DEBUG",
+      "formatter": "detailed",
+      "filename": "reports/pipeline.log",
+      "maxBytes": 150000,
+      "backupCount": 3
     }
   },
   "loggers": {
     "root": {
       "level": "DEBUG",
-      "handlers": [
-        "stderr"
-      ]
+      "handlers": ["stderr", "file"]
+    },
+    "httpx": {
+      "level": "DEBUG",
+      "handlers": ["default"]
     }
   }
 }
