--- a/src/utils/config.json
+++ b/src/utils/config.json
@@ -1,6 +1,6 @@
 {
   "version": 1,
-  "disable_existing_loggers": true,
+  "disable_existing_loggers": false,
   "formatters": {
     "simple": {
       "format": "%(levelname)s: %(message)s [L%(lineno)d]"
@@ -11,22 +11,17 @@
     }
   },
   "handlers": {
-    "default": {
-      "class": "logging.StreamHandler",
-      "formatter": "simple",
-      "stream": "ext://sys.stderr"
-    },
     "stderr": {
       "class": "logging.StreamHandler",
-      "level": "DEBUG",
-      "formatter": "detailed",
+      "level": "WARNING",
+      "formatter": "simple",
       "stream": "ext://sys.stderr"
     },
     "file": {
       "class": "logging.handlers.RotatingFileHandler",
       "level": "DEBUG",
       "formatter": "detailed",
-      "filename": "reports/pipeline.log",
+      "filename": "reports/logs/pipeline.log",
       "maxBytes": 150000,
       "backupCount": 3
     }
@@ -34,11 +29,10 @@
   "loggers": {
     "root": {
       "level": "DEBUG",
-      "handlers": ["stderr", "file"]
-    },
-    "httpx": {
-      "level": "DEBUG",
-      "handlers": ["default"]
+      "handlers": [
+        "stderr",
+        "file"
+      ]
     }
   }
 }
