one day this action will work

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -27,7 +27,7 @@ jobs:
     - name: Install dependencies
       uses: VaultVulp/action-pipenv@v2.0.1
       with:
-        command: install -d # Install all dependencies, including development ones
+        command: sync # Install all dependencies, including development ones
 
   lint:
     runs-on: ubuntu-latest
