--- a/Pipfile
+++ b/Pipfile
@@ -5,18 +5,18 @@ name = "pypi"
 
 [packages]
 pandas = "*"
-httpx = "*"
+httpx = {extras = ["http2"], version = "*"}
 beautifulsoup4 = "*"
 python-dotenv = "*"
 pandera = "*"
 pyyaml = "*"
-black = "*"
 frictionless = "*"
 openpyxl = "*"
 
 [dev-packages]
 ipykernel = "*"
 pytest = "*"
+black = "*"
 
 [requires]
-python_version = "3.10.11"
+python_version = "3.10"
