--- a/Pipfile
+++ b/Pipfile
@@ -15,9 +15,10 @@ openpyxl = "*"
 
 [dev-packages]
 ipykernel = "*"
-pytest = "*"
+pytest = {extras = ["asyncio"], version = "*"}
 black = "*"
 coloredlogs = "*"
+pytest-asyncio = "*"
 
 [requires]
 python_version = "3.10"
